added cron module

--- a/package.json
+++ b/package.json
@@ -1,28 +1,72 @@
 {
-  "name": "mail-service",
+  "name": "Lagunapp",
   "version": "1.0.0",
-  "description": "Mail service to lagun",
+  "description": "Lagunapp's api doc",
+  "engines": {
+    "node": "6.10.3"
+  },
   "main": "server.js",
   "scripts": {
-    "start": "gulp apidoc && node server.js"
+    "start": "gulp apidoc && NODE_PATH=. node server.js",
+    "lint": "gulp lint"
   },
-  "author": "Lagun",
+  "author": "Lagunapp",
   "license": "ISC",
+  "devDependencies": {
+    "gulp-mocha": "^2.2.0",
+    "mocha": "^2.3.4",
+    "request-debug": "^0.2.0",
+    "supertest": "^1.1.0"
+  },
   "dependencies": {
-    "async": "^2.6.0",
-    "cookie-parser": "^1.4.3",
-    "express": "^4.16.3",
+    "assert": "^1.3.0",
+    "async": "^1.5.0",
+    "authy": "^1.2.0",
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.14.2",
+    "clone": "^2.1.1",
+    "cluster": "^0.7.7",
+    "cobuild2": "git+https://bitbucket.org/rokk3rlabs/cobuild-npm-module.git#v0.3.1",
+    "connect-ensure-login": "^0.1.1",
+    "connect-multiparty": "^2.0.0",
+    "cookie-parser": "^1.4.0",
+    "cors": "^2.7.1",
+    "crypto": "0.0.3",
+    "debug": "^2.2.0",
+    "express": "^4.13.3",
     "express-custom-response": "^0.1.1",
-    "express-limiter": "^1.6.1",
-    "express-session": "^1.15.6",
-    "gulp": "^3.9.1",
-    "gulp-apidoc": "^0.2.7",
-    "helmet": "^3.12.0",
-    "lodash": "^4.17.5",
-    "mocha": "^5.0.4",
-    "nodemailer": "^4.6.3",
-    "nunjucks": "^3.1.2",
-    "q": "^1.5.1",
-    "should": "^13.2.1"
+    "express-force-ssl": "^0.3.2",
+    "express-limiter": "^1.6.0",
+    "express-session": "^1.12.1",
+    "forever": "^0.11.1",
+    "gcs-signed-urls": "^1.0.3",
+    "gulp": "^3.9.0",
+    "gulp-apidoc": "^0.1.5",
+    "gulp-eslint": "^2.0.0",
+    "helmet": "^1.1.0",
+    "i18n": "^0.5.0",
+    "jsonwebtoken": "^5.4.1",
+    "lodash": "^3.10.1",
+    "md5": "^2.2.1",
+    "mime": "^1.3.4",
+    "moment": "^2.11.1",
+    "mongoose": "^4.4.17",
+    "mongoose-auto-increment": "^5.0.1",
+    "mongoose-findorcreate": "^0.1.2",
+    "mongoose-gen": "^2.1.1",
+    "mongoose-paginate": "git+https://github.com/rokk3rlabs/mongoose-paginate.git",
+    "mongoose-timestamp": "^0.6.0",
+    "morgan": "^1.6.1",
+    "multer": "^1.1.0",
+    "node-cron": "^1.2.1",
+    "nodemailer": "^4.6.4",
+    "nunjucks": "^3.1.3",
+    "oauth": "^0.9.14",
+    "oauth2-provider": "^1.3.0",
+    "oauth2orize": "^1.2.1",
+    "q": "^1.4.1",
+    "querystring": "^0.2.0",
+    "request": "^2.67.0",
+    "winston": "^2.1.1"
   }
 }
